<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                tools:src="@drawable/ic_launcher_foreground"
                android:adjustViewBounds="true"
                android:background="@drawable/profile_avatar" />

            <Button
                android:id="@+id/profile_change_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:background="@drawable/photo_button"
                android:text="@string/change_photo_label"/>

        </LinearLayout>

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profile_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/username_label"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_username" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_username_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/profile_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_email"
            app:layout_constraintStart_toStartOf="@+id/profile_username_label"
            app:layout_constraintTop_toTopOf="@+id/profile_email" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_email_label"
            app:layout_constraintTop_toBottomOf="@+id/profile_username"
            tools:text="test@gmail.com" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>